Bivariate heatmap added

--- a/Bivariate Plotting/Scatter Plots.ipynb
+++ b/Bivariate Plotting/Scatter Plots.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -356,13 +356,13 @@
        "9         4  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "##fuel_econ.head(10)"
+    "fuel_econ.head(10)"
    ]
   },
   {
