--- a/Bivariate Plotting/Size and Shape.ipynb
+++ b/Bivariate Plotting/Size and Shape.ipynb
@@ -346,6 +346,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Size below represents CO2 emissions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {
